# GOSTnetsraster

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.html  README.md  genindex.html  pyproject.toml  requirements-tutorial.txt  requirements.txt  search.html  setup.py
.github/workflows/: build.yml  gh-pages.yml  release.yml
docs/: README.md  TUTORIAL_Friction_Surface.ipynb  TUTORIAL_MCP_market_access.ipynb  myst.yml
docs/api/: market_access.md
notebooks/: EXPLORING_market_access.ipynb  TUTORIAL_Friction_Surface.ipynb  TUTORIAL_MCP_market_access.ipynb
notebooks/IMPLEMENTATIONS/: GLO_Walker_Comparison.ipynb
notebooks/IMPLEMENTATIONS/BRA_Health_Access/: BRA_market_access.ipynb
notebooks/IMPLEMENTATIONS/GEO_road_improvements/: GEO_market_access.ipynb  README.md
notebooks/IMPLEMENTATIONS/IRQ_Road_Improvements/: IRQ_market_access.ipynb  README.md
notebooks/IMPLEMENTATIONS/LBR_access_facilities/: LBR_access_services.ipynb  README.md
notebooks/IMPLEMENTATIONS/SEN_Market_Access/: SEN_calculate_market_access.ipynb
notebooks/IMPLEMENTATIONS/SSD_access_health/: SSD_health_access.ipynb
notebooks/IMPLEMENTATIONS/TUN_Road_Improvements/: Friction_Generation.ipynb  README.md  TUN_market_access.ipynb
notebooks/TUTORIALS/: README.md  TUTORIAL_Friction_Surface.ipynb  TUTORIAL_MCP_market_access.ipynb
notebooks/TUTORIALS/tutorial_data/: RWA_AOI_buffer.geojson  SEN_Landcover_projected.tif  SEN_Landcover_projected.tif.aux.xml
notebooks/tutorial_data/: SEN_AOI_buffer.geojson  SEN_cities.geojson  SEN_friction_surface.tif
src/: market_access.py
src/GOSTNetsRaster/: conversion_tables.py  market_access.py
src/GOSTNets_Raster/: market_access.py
src/GOSTnetsraster/: conversion_tables.py  market_access.py
